--- a/src/main/resources/assets/audiobook/lang/en_us.json
+++ b/src/main/resources/assets/audiobook/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "key.audiobook.read_book": "Read/Cancel Audiobook"
+  "key.audiobook.read_book": "Read Audiobook",
+  "key.audiobook.stop_book": "Cancel Narration"
 }
